# ingest-o-bot

./: .env.example  .gitignore  AGENT_TEAM_REPORT.md  CHANGELOG.md  CLI_TESTING_COMMANDS.md  ENVIRONMENT_CONFIGURATION_GUIDE.md  ENVIRONMENT_CONFIG_FIXES_SUMMARY.md  ENVIRONMENT_QUICK_REFERENCE.md  ENV_FILES_CLEANUP.md  ENV_FILE_USAGE_GUIDE.md  ENV_IMPROVEMENTS_SUMMARY.md  FIX_SECRET_LEAK.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_WORKFLOW.md  MIGRATION.md  NEW_ENV_SCENARIOS_SUMMARY.md  PLUGGABLE_ARCHITECTURE_SUMMARY.md  QUICK_TEST_COMMANDS.md  README.md  RELEASE_NOTES.md  SECURITY_VERIFICATION_REPORT.md  SETUP_GUIDE.md  TESTING_RESULTS.md  cleanup-duplicate-envs.bat  cleanup-duplicate-envs.sh  cleanup_docs.bat  cleanup_docs.py  cli_examples.bat  pyproject.toml  requirements-chromadb.txt  requirements-embeddings.txt  requirements-gpu.txt  requirements-gradio.txt  requirements-pdf.txt  requirements.txt  validate_all_envs.bat
docs/: ARTIFACTS_MODE_STANDARD_LOGIC.md  CLI-TESTING-SUMMARY.md  CLI_REFERENCE.md  INDEX.md  INDEX_COMPARISON_REPORT.md  INDEX_CONFIGURATION.md  INDEX_CONFIG_QUICKREF.md  JSON_SCHEMA_IMPORT_EXPORT.md  UI_VECTOR_STORE_BROWSER.md  VARIABLE_NAMING_STANDARDIZATION.md  cli-test-execution-guide.md  cli-test-results.md  cli_help.txt  configuration_examples.md  embeddings_providers.md  vector_stores.md
envs/: .env.azure-chromadb-hybrid.example  .env.chromadb.example  .env.cohere.example  .env.example  .env.example.dev  .env.example.prod  .env.example.staging  .env.hybrid-scenarios.example  .env.hybrid.example  .env.offline-with-vision.example  .env.scenario-azure-cohere.example  .env.scenario-azure-openai-default.example  .env.scenario-cost-optimized.example  .env.scenario-development.example  .env.scenario-multilingual.example  .env.scenarios.example  CONFIGURATION_FLAGS_GUIDE.md  QUICK_REFERENCE.md  README.md  SCENARIOS_GUIDE.md  env.office-scenario1-azure-di-only.example  env.office-scenario2-markitdown-only.example  env.office-scenario3-hybrid-fallback.example  env.scenario1-local-dev.example  env.scenario2-blob-prod.example  env.scenario3-local-to-blob.example  env.scenario4-blob-to-local.example  env.scenario5-offline.example
examples/: README.md  azure_search_cohere.py  deploy_index_example.py  json_schema_example.py  offline_chromadb_huggingface.py
plans/: pluggable-architecture.md
scripts/: README.md  launch_ui.bat  launch_ui.sh  run_test.bat  run_test.sh  switch_env.py  test_index_ops.bat  test_index_ops.sh
tests/: README-CLI-TESTS.md  cli-test-schema.json  test_architecture_complete.py  test_cli_comprehensive.py  test_cli_overrides.py  test_config_loading.py  test_embeddings_generator.py  test_gradio_ui.py  (+8 more)
(+204 files in other folders)
